--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,7 @@
-asgiref==3.8.1
-async-timeout==5.0.1
-beautifulsoup4==4.12.3
-blinker==1.9.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.2.1
-colorama==0.4.6
-distlib==0.3.8
-Django==5.1.3
-django-bootstrap4==24.3
-django-cors-headers==4.6.0
-djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
-efficientnet_pytorch==0.7.1
-filelock==3.13.1
 Flask==3.1.1
-fsspec==2025.5.1
-# 아래 패키지는 개발 도구이며, Render 배포 시 불필요. 로컬에서만 사용하세요
-# git-filter-repo==2.45.0
 gunicorn==23.0.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-mpmath==1.3.0
-networkx==3.5
-numpy==2.2.2
-packaging==25.0
-pandas==2.2.3
-pillow==11.0.0
-platformdirs==4.2.0
-PyJWT==2.10.0
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-pytz==2024.2
-redis==5.2.0
-requests==2.32.3
-setuptools==69.2.0
-six==1.17.0
-soupsieve==2.5
-spotipy==2.24.0
-sqlparse==0.5.2
-sympy==1.14.0
-# Render용 CPU 전용 PyTorch (CUDA 없는 버전)
 torch==2.7.0
 torchvision==0.22.0
-typing_extensions==4.14.0
-tzdata==2024.2
-urllib3==2.2.3
-virtualenv==20.25.1
-Werkzeug==3.1.3
-wheel==0.43.0
+Pillow==11.0.0
+requests==2.32.3
+efficientnet_pytorch==0.7.1
